# rust-mix

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
apps/client/: Cargo.toml
apps/client/src/: main.rs
apps/file/: Cargo.toml
apps/file/src/: http.rs  main.rs  serialize.rs  write_to_file.rs
apps/my_bin/: Cargo.toml  build.rs
apps/my_bin/include/: mylib.h
apps/my_bin/src/: atomic_counter.rs  bindings.rs  bindings1.rs  main.rs  mylib.c
apps/my_bin/src/trait_1/: animal.rs  container.rs  mod.rs  same_name.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
benches/: benchmark.rs  compare_algorithms.rs
crates/algorithm/src/: lib.rs
crates/my_lib/: Cargo.toml
crates/my_lib/src/: lib.rs
crates/my_lib/src/arithmetic/: add.rs
crates/my_lib/src/other/: closure_life_cycle.rs  life_cycle.rs  life_cycle_1.rs  mod.rs
crates/my_lib/src/protocol/: mod.rs
crates/my_lib/src/utils/: CustomError.rs  custom_error.rs  file.rs  mod.rs  redis_util.rs  sqlite_tool_async.rs  sqlite_util.rs  time.rs
crates/neural_network/src/: layer.rs  lib.rs  neural_network.rs
examples/: demo.rs
tests/: integration_test.rs  samples.rs
