[package]
name = "file"
version = "0.1.0"
edition = "2021"

[features]
default = []
full = ["tokio"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", optional = true }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"